*SVN*

* Added the possibility of passing nil to UrlHelper#link_to to use the link itself as the name


*1.2.0* (January 4th, 2005)

* Added MemCacheStore for storing session data in Danga's MemCache system [Bob Cottrell]
  Depends on: MemCached server (http://www.danga.com/memcached/), MemCache client (http://raa.ruby-lang.org/project/memcache/)

* Added thread-safety to the DRbStore #66, #389 [Ben Stiglitz]

* Added DateHelper#select_time and DateHelper#select_second #373 [Scott Baron]

* Added :host and :protocol options to url_for and friends to redirect to another host and protocol than the current.

* Added class declaration for the MissingFile exception #388 [Kent Sibilev]

* Added "short hypertext note with a hyperlink to the new URI(s)" to redirects to fulfill compliance with RFC 2616 (HTTP/1.1) section 10.3.3 #397 [Tim Bates]

* Added second boolean parameter to Base.redirect_to_url and Response#redirect to control whether the redirect is permanent or not (301 vs 302) #375 [Hodel]

* Fixed redirects when the controller and action is named the same. Still haven't fixed same controller, module, and action, though #201 [Josh]

* Fixed problems with running multiple functional tests in Rails under 1.8.2 by including hack for test/unit weirdness

* Fixed that @request.remote_ip didn't work in the test environment #369 [Bruno Mattarollo]


*1.1.0*

* Added search through session to clear out association caches at the end of each request. This makes it possible to place Active Record objects
  in the session without worrying about stale data in the associations (the main object is still subject to caching, naturally) #347 [Tobias Luetke]

* Added more informative exception when using helper :some_helper and the helper requires another file that fails, you'll get an
  error message tells you what file actually failed to load, rather than falling back on assuming it was the helper file itself #346 [dblack]
